feat: adding pdf version for the defense presentation

--- a/Submission Documents/Abstract.tex
+++ b/Submission Documents/Abstract.tex
@@ -20,7 +20,7 @@ The thesis introduces the first quantum protocol for oblivious linear evaluation
 
 \begin{flushleft}
 \textbf{Key-words:} quantum cryptography, quantum oblivious transfer, quantum oblivious
-linear evaluation, secure multiparty computation.
+linear evaluation, secure multiparty computation, UC security.
 \end{flushleft}
 
 
