--- a/Submission Documents/Abstract_Resumo_ResumoAlargado.tex
+++ b/Submission Documents/Abstract_Resumo_ResumoAlargado.tex
@@ -21,7 +21,7 @@ The thesis introduces the first quantum protocol for oblivious linear evaluation
 
 \begin{flushleft}
 \textbf{Key-words:} quantum cryptography, quantum oblivious transfer, quantum oblivious
-linear evaluation, secure multiparty computation.
+linear evaluation, secure multiparty computation, UC security.
 \end{flushleft}
 
 
@@ -32,7 +32,7 @@ linear evaluation, secure multiparty computation.
 \textbf{Nome:} Manuel Maria Trigueiros Sampaio Batalha dos Santos\\
 \textbf{Doutoramento em:} Seguran\c{c}a da Informa\c{c}\~{a}o\\
 \textbf{Orientador:} Paulo Alexandre Carreira Mateus\\
-\textbf{Co-Orientador:} Armando Nolasco Pinto\\
+\textbf{Co-Orientador:} Armando Humberto Moreira Nolasco Pinto\\
 \vspace{2\baselineskip}
 
 \underline{\textbf{Resumo}}\\
@@ -46,7 +46,7 @@ A tese apresenta o primeiro protocolo quântico para avaliação linear oblívia
 
 \vfill
 \begin{flushleft}
-\textbf{Palavras-chave:} criptografia qu\^{a}ntica, transferência oblívia quântica, avaliação linear oblívia quântica, computação multipartidária segura.
+\textbf{Palavras-chave:} criptografia qu\^{a}ntica, transferência oblívia quântica, avaliação linear oblívia quântica, computação multipartidária segura, segurança UC.
 \end{flushleft}
 
 
@@ -70,7 +70,7 @@ Finalmente, apresentamos o primeiro protocolo quântico de  avaliação linear o
 
 \vfill
 \begin{flushleft}
-\textbf{Palavras-chave:} criptografia qu\^{a}ntica, transferência oblívia quântica, avaliação linear oblívia quântica, computação multipartidária segura.
+\textbf{Palavras-chave:} criptografia qu\^{a}ntica, transferência oblívia quântica, avaliação linear oblívia quântica, computação multipartidária segura, segurança UC.
 \end{flushleft}
 
 
