--- a/Submission Documents/resumo.tex
+++ b/Submission Documents/resumo.tex
@@ -9,7 +9,7 @@
 \textbf{Nome:} Manuel Maria Trigueiros Sampaio Batalha dos Santos\\
 \textbf{Doutoramento em:} Seguran\c{c}a da Informa\c{c}\~{a}o\\
 \textbf{Orientador:} Paulo Alexandre Carreira Mateus\\
-\textbf{Co-Orientador:} Armando Nolasco Pinto\\
+\textbf{Co-Orientador:} Armando Humberto Moreira Nolasco Pinto\\
 \vspace{2\baselineskip}
 
 \underline{\textbf{Resumo}}\\
@@ -23,6 +23,6 @@ A tese apresenta o primeiro protocolo quântico para avaliação linear oblívia
 
 \vfill
 \begin{flushleft}
-\textbf{Palavras-chave:} criptografia qu\^{a}ntica, transferência oblívia quântica, avaliação linear oblívia quântica, computação multipartidária segura.
+\textbf{Palavras-chave:} criptografia qu\^{a}ntica, transferência oblívia quântica, avaliação linear oblívia quântica, computação multipartidária segura, segurança UC.
 \end{flushleft}
 \end{document}
