--- a/Thesis_FrontCover.tex
+++ b/Thesis_FrontCover.tex
@@ -30,7 +30,7 @@ Quantum Assisted Secure Multiparty Computation} \\
 
 
 {\FontMb Supervisor: \FontMn \qquad Doctor Paulo Alexandre Carreira Mateus} \\
-{\FontMb Co-Supervisor: \FontMn \hspace{.0em} Doctor Armando Nolasco Pinto} \\
+{\FontMb Co-Supervisor: \FontMn \hspace{.0em} Doctor Armando Humberto Moreira Nolasco Pinto} \\
 
 \vspace{2.5cm}
 
