--- a/abstract.tex
+++ b/abstract.tex
@@ -13,5 +13,5 @@ Finally, the thesis presents the first quantum protocol for oblivious linear eva
 \vfill
 
 \begin{flushleft}
-\textbf{Key-words:} quantum cryptography, quantum oblivious transfer, quantum oblivious linear evaluation, secure multiparty computation.
+\textbf{Key-words:} quantum cryptography, quantum oblivious transfer, quantum oblivious linear evaluation, secure multiparty computation, UC security.
 \end{flushleft}
