--- a/resumo.tex
+++ b/resumo.tex
@@ -15,5 +15,5 @@ Finalmente, apresentamos o primeiro protocolo quântico de  avaliação linear o
 
 \vfill
 \begin{flushleft}
-\textbf{Palavras-chave:} criptografia qu\^{a}ntica, transferência oblívia quântica, avaliação linear oblívia quântica, computação multipartidária segura.
+\textbf{Palavras-chave:} criptografia qu\^{a}ntica, transferência oblívia quântica, avaliação linear oblívia quântica, computação multipartidária segura, segurança UC.
 \end{flushleft}
