feat: update final version of thesis

--- a/Cover_print_1st_page_Final.tex
+++ b/Cover_print_1st_page_Final.tex
@@ -46,10 +46,10 @@
 % Title, author and degree
 \vspace{5.0cm}
 {\FontHb 
-Quantum walks in cryptography and finite-temperature topological phase transitions} \\
+Quantum Assisted Secure Multiparty Computation} \\
 
 \vspace{3cm}
-{\FontLn Chrysoula Vlachou} \\
+{\FontLn Manuel Maria Trigueiros Sampaio Batalha dos Santos} \\
 \vspace{2cm}
 
 \end{center}
@@ -57,7 +57,7 @@ Quantum walks in cryptography and finite-temperature topological phase transitio
 
 
 {\FontMb Supervisor: \FontMn \qquad Doctor Paulo Alexandre Carreira Mateus} \\
-{\FontMb Co-Supervisor: \FontMn \hspace{.0em} Doctor Nikola Paunkovi\'c} \\
+{\FontMb Co-Supervisor: \FontMn \hspace{.0em} Doctor Armando Humberto Moreira Nolasco Pinto} \\
 
 \vspace{2.5cm}
 
@@ -66,14 +66,14 @@ Quantum walks in cryptography and finite-temperature topological phase transitio
 
 {\FontMn Thesis approved in public session to obtain the PhD Degree} \\
 %\vspace{0.3cm}
-{\FontMn Physics} \\
+{\FontMn Information Security} \\
 %%previous spacing%%
 \vspace{1.5cm}
 %%current spacing%%
 %\vspace{1.5cm}
 {\FontMb Jury final classification: } Pass with Distinction \\
 \vfill
-{\FontMb 2018} \\
+{\FontMb 2025} \\
 %
 \end{center}
 \thispagestyle{empty}
@@ -87,26 +87,26 @@ Quantum walks in cryptography and finite-temperature topological phase transitio
 {\FontLb UNIVERSIDADE DE LISBOA} \\
 \vspace{0.2cm}
 {\FontLb INSTITUTO SUPERIOR T\'{E}CNICO} \\
-\vspace{1.0cm}
+\vspace{1cm}
 {\FontHb 
-Quantum walks in cryptography and finite-temperature topological phase transitions} \\
+Quantum Assisted Secure Multiparty Computation} \\
 
-\vspace{1.5cm}
-{\FontLn Chrysoula Vlachou} \\
-\vspace{1.5cm}
+\vspace{1cm}
+{\FontLn Manuel Maria Trigueiros Sampaio Batalha dos Santos} \\
+\vspace{1cm}
 
 \end{center}
 \begin{flushleft}
 {\FontMb Supervisor: \FontMn \qquad Doctor Paulo Alexandre Carreira Mateus} \\
-{\FontMb Co-Supervisor: \FontMn \hspace{.0em} Doctor Nikola Paunkovi\'c} \\
+{\FontMb Co-Supervisor: \FontMn \hspace{.0em} Doctor Armando Humberto Moreira Nolasco Pinto} \\
 
 %%previous spacing%%
-\vspace{1cm}
+\vspace{0.7cm}
 %%current spacing%%
 %\vspace{1.5cm}
 \end{flushleft}
 \begin{center}
-{\FontMn Thesis approved in public session to obtain the PhD Degree in\\ Physics} \\
+{\FontMn Thesis approved in public session to obtain the PhD Degree in\\ Information Security} \\
 \vspace{0.5cm}
 {\FontMb Jury final classification:} Pass with Distinction \\
 \vspace{0.5cm}
@@ -114,15 +114,15 @@ Quantum walks in cryptography and finite-temperature topological phase transitio
 \end{center}
 \vspace{0.5cm}
 \begin{flushleft}
-{\FontMb Chairperson:} Doctor Jos\'e Lu\'is Rodrigues J\'ulio Martins, Instituto Superior T\'ecnico da Universidade de Lisboa  \\
+{\FontMb Chairperson:} Doctor Miguel Nuno Dias Alves Pupo Correia, Instituto Superior T\'ecnico da Universidade de Lisboa  \\
 {\FontMb Members of the Comittee:}\\
-Doctor Armando Humberto Moreira Nolasco Pinto, Universidade de Aveiro\\
-Doctor Pedro Domingos Santos do Sacramento, Instituto Superior T\'ecnico da Universidade de Lisboa\\
-Doctor Miguel Ant\'onio da Nova Ara\'ujo, Escola de Ci\^encias e Tecnologia da Universidade de \'Evora\\
-Doctor Nikola Paunkovi\'c, Instituto de Telecomunica\c c\~oes, Lisboa
+Doctor Paulo Alexandre Carreira Mateus, Instituto Superior T\'ecnico da Universidade de Lisboa  \\
+Doctor Jeroen Antonius Maria van de Graaf, Departamento de Ci\^encia da Computa\c c\~ao - DCC, Universidade Federal de Minas Gerais - UFMG, Brasil \\
+Doctor Walter O. Krawec, School of Computing, UCONN - University of Connecticut, EUA \\
+Doctor Jo\~ao Miguel Louren\c co Ribeiro, Instituto Superior T\'ecnico da Universidade de Lisboa
 \vspace{1cm}
 
 {\FontMb Funding Institution:} Funda\c c\~ao para a Ci\^encia e a Tecnologia (FCT)\end{flushleft}
-\vfill \begin{center} {\FontMb 2018}
+\vfill \begin{center} {\FontMb 2025}
 \end{center}
 %\end{document}
