--- a/Thesis_FrontCover.tex
+++ b/Thesis_FrontCover.tex
@@ -46,7 +46,7 @@ Quantum Assisted Secure Multiparty Computation} \\
 %\vspace{1.5cm}
 {\FontLn Draft} \\
 \vspace{1cm}
-{\FontMb December 2023} \\
+{\FontMb 2025} \\
 %
 \end{center}
 
