--- a/Chrysis.tex
+++ b/Chrysis.tex
@@ -17,7 +17,7 @@
 % ----------------------------------------------------------------------
 %  Cover page
 % ----------------------------------------------------------------------
-\input{Thesis_FrontCover} 
+\input{Cover_print_1st_page_Final} 
 
 % ----------------------------------------------------------------------
 %  Abstract (both in English and Portuguese)
