feat: add Joaquim to ack

--- a/Thesis_Dedication.tex
+++ b/Thesis_Dedication.tex
@@ -8,7 +8,7 @@
 \vfill
 
 \begin{center}
-I dedicate this thesis to my loving wife Teresinha and my two children Henrique and Helena who came to life during this journey to help me finish it.
+I dedicate this thesis to my loving wife Teresinha and my three children Henrique, Helena and Joaquim who came to life during this journey to help me finish it.
 \end{center}
 
 
