--- a/acknowledgments.tex
+++ b/acknowledgments.tex
@@ -7,7 +7,7 @@ I am deeply grateful to my advisors, Paulo Mateus and Armando Nolasco Pinto, for
 
 I am also grateful for the valuable contributions of my colleagues, who have provided me with valuable insights and knowledge throughout this research. Special recognition goes to Chrysoula Vlachou for her stimulating discussions and Pedro Branco for his expertise on the UC framework and other crypto-related topics. Their guidance and support have been instrumental in shaping this research and making this journey a success.
 
-I would like to extend my appreciation to my friends Francisco Gomes, Gonçalo Santos, José Reis and Tomás Lobão, who have been a constant source of support and encouragement throughout my research journey. As the Latin saying goes, "Ver\ae\ amiciti\ae\ sempitern\ae\ sunt" (Cicero, "De Amicitia"). I also want to express my deep gratitude to my family, particularly my wife Teresinha and my children Henrique and Helena, for their unwavering love and support. This thesis is dedicated to them.
+I would like to extend my appreciation to my friends Francisco Gomes, Gonçalo Santos, José Reis and Tomás Lobão, who have been a constant source of support and encouragement throughout my research journey. As the Latin saying goes, "Ver\ae\ amiciti\ae\ sempitern\ae\ sunt" (Cicero, "De Amicitia"). I also want to express my deep gratitude to my family, particularly my wife Teresinha and my children Henrique, Helena and Joaquim, for their unwavering love and support. This thesis is dedicated to them.
 
 \vfill
 \begin{center}\begin{footnotesize}
